2015-12-12  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * configure.ac, configure, doc/gputils.lyx:
    The version changed to 1.4.2 .

  * gpasm/cod.c, gplink/cod.c, gputils/dump.c, libgputils/gpcod.h:
    Use the COD_LS_SMOD_FLAG_x defines.

  * gpasm/lst.c, gpasm/preprocess.c:
    Use more const pointer.

  * gplink/gplink.h.in, gplink/lst.c:
    Changed a variable type from int to gp_boolean.

  * libgputils/gparchive.*, libgputils/gpcoff.h:
    Minor changes.

2015-12-12  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/cod.c, gplink/cod.c:
    These functions moved to libgputils/gpcod.c:
      enumerate_blocks()    --> gp_blocks_enumerate()
      enumerate_directory() --> gp_blocks_enumerate_directory()
      write_blocks()        --> gp_blocks_write()
      write_directory()     --> gp_blocks_write_directory()
      free_blocks()         --> gp_blocks_free()
      free_directory()      --> gp_blocks_free_directory()

  * libgputils/gpcod.c, libgputils/gpcod.h:
    Faster handling of the "struct Blocks" list.

  * gpasm/directive.c:
    Where possible use const pointers. (const struct pnode *)

  * gpasm/preprocess.c, gpasm/processor.c, gplink/map.c,
    libgputils/gparchive.*, libgputils/gpcoff.h:
    Mostly changed text format.

  * libgputils/gpcofflink.c:
    Less code cleaning.

2015-12-06  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gputils/gpdasm:
    bugfix

2015-12-06  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/cod.c, gpasm/coff.c:
    Changed the comments.

  * gpasm/directive.c, gpasm/gpasm.h.in:
    Use logical constants.

  * gpasm/gpasm.c:
    Print the new "Idlocs OR Mask" value.

  * gpasm/ppscan.l, gpasm/preprocess.c:
    Use GP_Strndup() function.

  * gpasm/scan.l:
    Use GP_Strndup() function. Use logical constants.
    Use "IDLOCS CODE" in the --mpasm-compatible mode.
    Thanks to Andrew E. Mileski for the report.

  * gpasm/util.c:
    Code cleaning.
