@@ -534,7 +534,7 @@ static struct px pics[] = {
   { PROC_CLASS_PIC16E   , "__18F26J53"    , { "pic18f26j53"    , "p18f26j53"      , "18f26j53"        }, 0xD655,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0x00FFF7, 0x00FFF8, {       -1,       -1 }, {       -1,       -1 }, { 0x00FFF8, 0x00FFFF }, {       -1,       -1 }, 0x0000, "p18f26j53.inc"    , "18f26j53_g.lkr"    , 3 },
   { PROC_CLASS_PIC16E   , "__18F26K20"    , { "pic18f26k20"    , "p18f26k20"      , "18f26k20"        }, 0xD620,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0xF003FF, 0x010000, { 0x010000, 0xEFFFFF }, { 0x200000, 0x200007 }, { 0x300000, 0x30000D }, { 0xF00000, 0xF003FF }, 0x0000, "p18f26k20.inc"    , "18f26k20_g.lkr"    , 1 },
   { PROC_CLASS_PIC16E   , "__18F26K22"    , { "pic18f26k22"    , "p18f26k22"      , "18f26k22"        }, 0xD622,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0xF003FF, 0x010000, { 0x010000, 0xEFFFFF }, { 0x200000, 0x200007 }, { 0x300000, 0x30000D }, { 0xF00000, 0xF003FF }, 0x0000, "p18f26k22.inc"    , "18f26k22_g.lkr"    , 1 },
-  { PROC_CLASS_PIC16E   , "__18F26K40"    , { "pic18f26k40"    , "p18f26k40"      , "18f26k40"        }, 0x2640,  0,    1, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0xF003FF, 0x010000, { 0x010000, 0xEFFFFF }, { 0x200000, 0x20000F }, { 0x300000, 0x30000B }, { 0x310000, 0x3103FF }, 0x0000, "p18f26k40.inc"    , "18f26k40_g.lkr"    , 1 },
+  { PROC_CLASS_PIC16E   , "__18F26K40"    , { "pic18f26k40"    , "p18f26k40"      , "18f26k40"        }, 0x2640,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0xF003FF, 0x010000, { 0x010000, 0xEFFFFF }, { 0x200000, 0x20000F }, { 0x300000, 0x30000B }, { 0x310000, 0x3103FF }, 0x0000, "p18f26k40.inc"    , "18f26k40_g.lkr"    , 1 },
   { PROC_CLASS_PIC16E   , "__18F26K80"    , { "pic18f26k80"    , "p18f26k80"      , "18f26k80"        }, 0xA680,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0xF003FF, 0x010000, { 0x010000, 0xEFFFFF }, { 0x200000, 0x200007 }, { 0x300000, 0x30000D }, { 0xF00000, 0xF003FF }, 0x0000, "p18f26k80.inc"    , "18f26k80_g.lkr"    , 1 },
   { PROC_CLASS_PIC16E   , "__18F27J13"    , { "pic18f27j13"    , "p18f27j13"      , "18f27j13"        }, 0xD711,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0x01FFF7, 0x01FFF8, {       -1,       -1 }, {       -1,       -1 }, { 0x01FFF8, 0x01FFFF }, {       -1,       -1 }, 0x0000, "p18f27j13.inc"    , "18f27j13_g.lkr"    , 3 },
   { PROC_CLASS_PIC16E   , "__18F27J53"    , { "pic18f27j53"    , "p18f27j53"      , "18f27j53"        }, 0xD750,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0x01FFF7, 0x01FFF8, {       -1,       -1 }, {       -1,       -1 }, { 0x01FFF8, 0x01FFFF }, {       -1,       -1 }, 0x0000, "p18f27j53.inc"    , "18f27j53_g.lkr"    , 3 },
@@ -559,11 +559,11 @@ static struct px pics[] = {
   { PROC_CLASS_PIC16E   , "__18F46J53"    , { "pic18f46j53"    , "p18f46j53"      , "18f46j53"        }, 0xE655,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0x00FFF7, 0x00FFF8, {       -1,       -1 }, {       -1,       -1 }, { 0x00FFF8, 0x00FFFF }, {       -1,       -1 }, 0x0000, "p18f46j53.inc"    , "18f46j53_g.lkr"    , 3 },
   { PROC_CLASS_PIC16E   , "__18F46K20"    , { "pic18f46k20"    , "p18f46k20"      , "18f46k20"        }, 0xE620,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0xF003FF, 0x010000, { 0x010000, 0xEFFFFF }, { 0x200000, 0x200007 }, { 0x300000, 0x30000D }, { 0xF00000, 0xF003FF }, 0x0000, "p18f46k20.inc"    , "18f46k20_g.lkr"    , 1 },
   { PROC_CLASS_PIC16E   , "__18F46K22"    , { "pic18f46k22"    , "p18f46k22"      , "18f46k22"        }, 0xE622,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0xF003FF, 0x010000, { 0x010000, 0xEFFFFF }, { 0x200000, 0x200007 }, { 0x300000, 0x30000D }, { 0xF00000, 0xF003FF }, 0x0000, "p18f46k22.inc"    , "18f46k22_g.lkr"    , 1 },
-  { PROC_CLASS_PIC16E   , "__18F46K40"    , { "pic18f46k40"    , "p18f46k40"      , "18f46k40"        }, 0x4640,  0,    1, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0xF003FF, 0x010000, { 0x010000, 0xEFFFFF }, { 0x200000, 0x20000F }, { 0x300000, 0x30000B }, { 0x310000, 0x3103FF }, 0x0000, "p18f46k40.inc"    , "18f46k40_g.lkr"    , 1 },
+  { PROC_CLASS_PIC16E   , "__18F46K40"    , { "pic18f46k40"    , "p18f46k40"      , "18f46k40"        }, 0x4640,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0xF003FF, 0x010000, { 0x010000, 0xEFFFFF }, { 0x200000, 0x20000F }, { 0x300000, 0x30000B }, { 0x310000, 0x3103FF }, 0x0000, "p18f46k40.inc"    , "18f46k40_g.lkr"    , 1 },
   { PROC_CLASS_PIC16E   , "__18F46K80"    , { "pic18f46k80"    , "p18f46k80"      , "18f46k80"        }, 0xB680,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0xF003FF, 0x010000, { 0x010000, 0xEFFFFF }, { 0x200000, 0x200007 }, { 0x300000, 0x30000D }, { 0xF00000, 0xF003FF }, 0x0000, "p18f46k80.inc"    , "18f46k80_g.lkr"    , 1 },
   { PROC_CLASS_PIC16E   , "__18F47J13"    , { "pic18f47j13"    , "p18f47j13"      , "18f47j13"        }, 0xE711,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0x01FFF7, 0x01FFF8, {       -1,       -1 }, {       -1,       -1 }, { 0x01FFF8, 0x01FFFF }, {       -1,       -1 }, 0x0000, "p18f47j13.inc"    , "18f47j13_g.lkr"    , 3 },
   { PROC_CLASS_PIC16E   , "__18F47J53"    , { "pic18f47j53"    , "p18f47j53"      , "18f47j53"        }, 0xE750,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0x01FFF7, 0x01FFF8, {       -1,       -1 }, {       -1,       -1 }, { 0x01FFF8, 0x01FFFF }, {       -1,       -1 }, 0x0000, "p18f47j53.inc"    , "18f47j53_g.lkr"    , 3 },
-  { PROC_CLASS_PIC16E   , "__18F47K40"    , { "pic18f47k40"    , "p18f47k40"      , "18f47k40"        }, 0x4740,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0xF003FF, 0x020000, { 0x020000, 0xEFFFFF }, { 0x200000, 0x20000F }, { 0x300000, 0x30000B }, { 0x310000, 0x3103FF }, 0x0000, "p18f47k40.inc"    , "18f47k40_g.lkr"    , 0 },
+  { PROC_CLASS_PIC16E   , "__18F47K40"    , { "pic18f47k40"    , "p18f47k40"      , "18f47k40"        }, 0x4740,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0xF003FF, 0x020000, { 0x020000, 0xEFFFFF }, { 0x200000, 0x20000F }, { 0x300000, 0x30000B }, { 0x310000, 0x3103FF }, 0x0000, "p18f47k40.inc"    , "18f47k40_g.lkr"    , 1 },
   { PROC_CLASS_PIC16E   , "__18F63J11"    , { "pic18f63j11"    , "p18f63j11"      , "18f63j11"        }, 0x6311,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0x001FF7, 0x001FF8, {       -1,       -1 }, {       -1,       -1 }, { 0x001FF8, 0x001FFD }, {       -1,       -1 }, 0x0000, "p18f63j11.inc"    , "18f63j11_g.lkr"    , 3 },
   { PROC_CLASS_PIC16E   , "__18F63J90"    , { "pic18f63j90"    , "p18f63j90"      , "18f63j90"        }, 0xB390,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0x001FF7, 0x001FF8, {       -1,       -1 }, {       -1,       -1 }, { 0x001FF8, 0x001FFD }, {       -1,       -1 }, 0x0000, "p18f63j90.inc"    , "18f63j90_g.lkr"    , 3 },
   { PROC_CLASS_PIC16E   , "__18F64J11"    , { "pic18f64j11"    , "p18f64j11"      , "18f64j11"        }, 0x6411,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0x003FF7, 0x003FF8, {       -1,       -1 }, {       -1,       -1 }, { 0x003FF8, 0x003FFD }, {       -1,       -1 }, 0x0000, "p18f64j11.inc"    , "18f64j11_g.lkr"    , 3 },
@@ -780,7 +780,7 @@ static struct px pics[] = {
   { PROC_CLASS_PIC16E   , "__18LF26J50"   , { "pic18lf26j50"   , "p18lf26j50"     , "18lf26j50"       }, 0xB651,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0x00FFF7, 0x00FFF8, {       -1,       -1 }, {       -1,       -1 }, { 0x00FFF8, 0x00FFFF }, {       -1,       -1 }, 0x0000, "p18lf26j50.inc"   , "18lf26j50_g.lkr"   , 3 },
   { PROC_CLASS_PIC16E   , "__18LF26J53"   , { "pic18lf26j53"   , "p18lf26j53"     , "18lf26j53"       }, 0xB656,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0x00FFF7, 0x00FFF8, {       -1,       -1 }, {       -1,       -1 }, { 0x00FFF8, 0x00FFFF }, {       -1,       -1 }, 0x0000, "p18lf26j53.inc"   , "18lf26j53_g.lkr"   , 3 },
   { PROC_CLASS_PIC16E   , "__18LF26K22"   , { "pic18lf26k22"   , "p18lf26k22"     , "18lf26k22"       }, 0xB623,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0xF003FF, 0x010000, { 0x010000, 0xEFFFFF }, { 0x200000, 0x200007 }, { 0x300000, 0x30000D }, { 0xF00000, 0xF003FF }, 0x0000, "p18lf26k22.inc"   , "18lf26k22_g.lkr"   , 1 },
-  { PROC_CLASS_PIC16E   , "__18LF26K40"   , { "pic18lf26k40"   , "p18lf26k40"     , "18lf26k40"       }, 0xA640,  0,    1, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0xF003FF, 0x010000, { 0x010000, 0xEFFFFF }, { 0x200000, 0x20000F }, { 0x300000, 0x30000B }, { 0x310000, 0x3103FF }, 0x0000, "p18lf26k40.inc"   , "18lf26k40_g.lkr"   , 1 },
+  { PROC_CLASS_PIC16E   , "__18LF26K40"   , { "pic18lf26k40"   , "p18lf26k40"     , "18lf26k40"       }, 0xA640,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0xF003FF, 0x010000, { 0x010000, 0xEFFFFF }, { 0x200000, 0x20000F }, { 0x300000, 0x30000B }, { 0x310000, 0x3103FF }, 0x0000, "p18lf26k40.inc"   , "18lf26k40_g.lkr"   , 1 },
   { PROC_CLASS_PIC16E   , "__18LF26K80"   , { "pic18lf26k80"   , "p18lf26k80"     , "18lf26k80"       }, 0xD680,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0xF003FF, 0x010000, { 0x010000, 0xEFFFFF }, { 0x200000, 0x200007 }, { 0x300000, 0x30000D }, { 0xF00000, 0xF003FF }, 0x0000, "p18lf26k80.inc"   , "18lf26k80_g.lkr"   , 1 },
   { PROC_CLASS_PIC16E   , "__18LF27J13"   , { "pic18lf27j13"   , "p18lf27j13"     , "18lf27j13"       }, 0xB712,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0x01FFF7, 0x01FFF8, {       -1,       -1 }, {       -1,       -1 }, { 0x01FFF8, 0x01FFFF }, {       -1,       -1 }, 0x0000, "p18lf27j13.inc"   , "18lf27j13_g.lkr"   , 3 },
   { PROC_CLASS_PIC16E   , "__18LF27J53"   , { "pic18lf27j53"   , "p18lf27j53"     , "18lf27j53"       }, 0xC753,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0x01FFF7, 0x01FFF8, {       -1,       -1 }, {       -1,       -1 }, { 0x01FFF8, 0x01FFFF }, {       -1,       -1 }, 0x0000, "p18lf27j53.inc"   , "18lf27j53_g.lkr"   , 3 },
@@ -801,11 +801,11 @@ static struct px pics[] = {
   { PROC_CLASS_PIC16E   , "__18LF46J50"   , { "pic18lf46j50"   , "p18lf46j50"     , "18lf46j50"       }, 0xC651,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0x00FFF7, 0x00FFF8, {       -1,       -1 }, {       -1,       -1 }, { 0x00FFF8, 0x00FFFF }, {       -1,       -1 }, 0x0000, "p18lf46j50.inc"   , "18lf46j50_g.lkr"   , 3 },
   { PROC_CLASS_PIC16E   , "__18LF46J53"   , { "pic18lf46j53"   , "p18lf46j53"     , "18lf46j53"       }, 0xC656,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0x00FFF7, 0x00FFF8, {       -1,       -1 }, {       -1,       -1 }, { 0x00FFF8, 0x00FFFF }, {       -1,       -1 }, 0x0000, "p18lf46j53.inc"   , "18lf46j53_g.lkr"   , 3 },
   { PROC_CLASS_PIC16E   , "__18LF46K22"   , { "pic18lf46k22"   , "p18lf46k22"     , "18lf46k22"       }, 0xC623,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0xF003FF, 0x010000, { 0x010000, 0xEFFFFF }, { 0x200000, 0x200007 }, { 0x300000, 0x30000D }, { 0xF00000, 0xF003FF }, 0x0000, "p18lf46k22.inc"   , "18lf46k22_g.lkr"   , 1 },
-  { PROC_CLASS_PIC16E   , "__18LF46K40"   , { "pic18lf46k40"   , "p18lf46k40"     , "18lf46k40"       }, 0xA26E,  0,    1, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0xF003FF, 0x010000, { 0x010000, 0xEFFFFF }, { 0x200000, 0x20000F }, { 0x300000, 0x30000B }, { 0x310000, 0x3103FF }, 0x0000, "p18lf46k40.inc"   , "18lf46k40_g.lkr"   , 1 },
+  { PROC_CLASS_PIC16E   , "__18LF46K40"   , { "pic18lf46k40"   , "p18lf46k40"     , "18lf46k40"       }, 0xA26E,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0xF003FF, 0x010000, { 0x010000, 0xEFFFFF }, { 0x200000, 0x20000F }, { 0x300000, 0x30000B }, { 0x310000, 0x3103FF }, 0x0000, "p18lf46k40.inc"   , "18lf46k40_g.lkr"   , 1 },
   { PROC_CLASS_PIC16E   , "__18LF46K80"   , { "pic18lf46k80"   , "p18lf46k80"     , "18lf46k80"       }, 0xE680,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0xF003FF, 0x010000, { 0x010000, 0xEFFFFF }, { 0x200000, 0x200007 }, { 0x300000, 0x30000D }, { 0xF00000, 0xF003FF }, 0x0000, "p18lf46k80.inc"   , "18lf46k80_g.lkr"   , 1 },
   { PROC_CLASS_PIC16E   , "__18LF47J13"   , { "pic18lf47j13"   , "p18lf47j13"     , "18lf47j13"       }, 0xC712,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0x01FFF7, 0x01FFF8, {       -1,       -1 }, {       -1,       -1 }, { 0x01FFF8, 0x01FFFF }, {       -1,       -1 }, 0x0000, "p18lf47j13.inc"   , "18lf47j13_g.lkr"   , 3 },
   { PROC_CLASS_PIC16E   , "__18LF47J53"   , { "pic18lf47j53"   , "p18lf47j53"     , "18lf47j53"       }, 0xC751,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0x01FFF7, 0x01FFF8, {       -1,       -1 }, {       -1,       -1 }, { 0x01FFF8, 0x01FFFF }, {       -1,       -1 }, 0x0000, "p18lf47j53.inc"   , "18lf47j53_g.lkr"   , 3 },
-  { PROC_CLASS_PIC16E   , "__18LF47K40"   , { "pic18lf47k40"   , "p18lf47k40"     , "18lf47k40"       }, 0x0000,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0xF003FF, 0x020000, { 0x020000, 0xEFFFFF }, { 0x200000, 0x20000F }, { 0x300000, 0x30000B }, { 0x310000, 0x3103FF }, 0x0000, "p18lf47k40.inc"   , "18lf47k40_g.lkr"   , 0 },
+  { PROC_CLASS_PIC16E   , "__18LF47K40"   , { "pic18lf47k40"   , "p18lf47k40"     , "18lf47k40"       }, 0x0000,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0xF003FF, 0x020000, { 0x020000, 0xEFFFFF }, { 0x200000, 0x20000F }, { 0x300000, 0x30000B }, { 0x310000, 0x3103FF }, 0x0000, "p18lf47k40.inc"   , "18lf47k40_g.lkr"   , 1 },
   { PROC_CLASS_PIC16E   , "__18LF65K80"   , { "pic18lf65k80"   , "p18lf65k80"     , "18lf65k80"       }, 0xF580,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0xF003FF, 0x008000, { 0x008000, 0xEFFFFF }, { 0x200000, 0x200007 }, { 0x300000, 0x30000D }, { 0xF00000, 0xF003FF }, 0x0000, "p18lf65k80.inc"   , "18lf65k80_g.lkr"   , 1 },
   { PROC_CLASS_PIC16E   , "__18LF66K80"   , { "pic18lf66k80"   , "p18lf66k80"     , "18lf66k80"       }, 0xF680,  0, 0x60, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0xF003FF, 0x010000, { 0x010000, 0xEFFFFF }, { 0x200000, 0x200007 }, { 0x300000, 0x30000D }, { 0xF00000, 0xF003FF }, 0x0000, "p18lf66k80.inc"   , "18lf66k80_g.lkr"   , 1 },
   { PROC_CLASS_PIC16E   , "__18LF242"     , { "pic18lf242"     , "p18lf242"       , "18lf242"         }, 0xA208,  0, 0x80, 0x0F00, {   -1,   -1 },    -1, {     -1,     -1 }, 0x0FFF, 0xF000FF, 0x004000, { 0x004000, 0xEFFFFF }, { 0x200000, 0x200007 }, { 0x300000, 0x30000D }, { 0xF00000, 0xF000FF }, 0x0000, "p18lf242.inc"     , "18lf242_g.lkr"     , 0 },
