@@ -1,3 +1,8 @@
+2015-12-21  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+  * libgputils/gpprocessor.c:
+    bugfix: The 18f47k40 and 18lf47k40 have XINST config bit.
+            18fxxk40 wrong access RAM split address.
+
 2015-12-12  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
   * configure.ac, configure, doc/gputils.lyx:
     The version changed to 1.4.2 .
